--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "raytrace"
 version = "0.1.0"
-authors = ["Roman Levin <roman.levin@holidaycheck.com>"]
+authors = ["Roman Levin <roman@holidaycheck.com>"]
 edition = "2018"
 
 [dependencies]
